# CV2015

./: Notes.txt  README.md
exampleCode/CamTest/: CMakeLists.txt  CamTest.cpp  StillCamTest.cpp
exampleCode/ContourImage/: CMakeLists.txt  ContourImage.cpp
exampleCode/CratePipeline/: CMakeLists.txt  CratePipeline.cpp
exampleCode/HSVThresholdImage/: CMakeLists.txt  HSVThresholdImage.cpp
exampleCode/TestImages/: Thumbs.db
exampleCode/WebTest/: CMakeLists.txt  Deamon.cpp  cvs1977_init.sh
