CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) 
PROJECT( CamTest )

FIND_PACKAGE( raspicam REQUIRED )
FIND_PACKAGE( OpenCV REQUIRED )

IF( OpenCV_FOUND AND raspicam_CV_FOUND )

    MESSAGE( STATUS "COMPILING OPENCV TESTS" )

    ADD_EXECUTABLE( CamTest CamTest.cpp )  
    TARGET_LINK_LIBRARIES( CamTest ${raspicam_CV_LIBS} )

    ADD_EXECUTABLE( StillCamTest StillCamTest.cpp )  
    TARGET_LINK_LIBRARIES( StillCamTest ${raspicam_CV_LIBS} )

ELSE()

    MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")

ENDIF()
