CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) 
PROJECT( WebTest )

FIND_PACKAGE( raspicam REQUIRED )
FIND_PACKAGE( OpenCV REQUIRED )

IF( OpenCV_FOUND AND raspicam_CV_FOUND )

    MESSAGE( STATUS "COMPILING WEB TESTS" )

    ADD_EXECUTABLE( WebTest Deamon.cpp )  
    #TARGET_LINK_LIBRARIES( WebTest ${raspicam_CV_LIBS} )
    TARGET_LINK_LIBRARIES( WebTest -lmicrohttpd )

ELSE()

    MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")

ENDIF()
